--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,62 @@
-table {
-    border-collapse: collapse;
-    margin: 15px 0;
+.container {
+    z-index: 2;
+    position: relative;
 }
 
-td, th {
-    border: 1px solid black;
-    padding: 5px 10px;
+.container>h1, form>h3 {
+    font-family: 'Birthstone', cursive;
+    text-shadow: 0px 3px 0px #cec5a7,
+                 0px 3px 10px rgba(0,0,0,0.15),
+                 0px 13px 2px rgba(0,0,0,0.1),
+                 0px 23px 30px rgba(0,0,0,0.1);
+}
+
+#below-coffee {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+label {
+    font-family: 'Lato', sans-serif;
+    font-size: x-large;
+}
+
+.coffee-vid {
+    height: 100%;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    object-fit: fill;
+}
+
+form {
+    background-color: rgba(245, 245, 220, 0.3);
+    border-radius: 10px;
+}
+
+form>h3 {
+    /*background-color: rgba(245, 245, 220, 0.7);*/
+    /*width: 50%;*/
+    /*border-radius: 10px;*/
+}
+
+#displayed-coffees {
+    background-color: rgba(0, 37, 73, 0.3);
+    border-radius: 10px;
+}
+
+.coffee-name {
+    color: beige;
+    text-shadow: 2px 1px black;
+}
+
+.coffee-roast {
+    color: #3b2404;
+}
+
+.btn {
+    background-color: rgba(0, 37, 73, .5);
+    font-family: 'Lato', sans-serif;
+    color: beige;
 }
